--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
-<h1>Monumentenwacht Vlaanderen Damage Ontology</h1>
+<h1>MWV Damage (MWV-D) Ontology</h1>
 
 
 <dl>
 <dt>Latest version:</dt>
-<dd><a href="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen">https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen</a></dd>
+<dd><a href="https://w3id.org/con-tax/damages/mwv">https://w3id.org/con-tax/damages/mwv</a></dd>
 <dt>Revision:</dt>
 <dd>0.0.1</dd>
 <dt>Authors:</dt>
