--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -1,173 +1,172 @@
-<h2 id="overv" class="list">Monumentenwacht Vlaanderen Damage Ontology: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<h2 id="overv" class="list">MWV Damage Ontology: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
 This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
 <ul class="hlist">
    <li>
       <a href="#Paper-damage_Biological-growth"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth">Biological growth</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth">Biological growth</a>
    </li>
    <li>
       <a href="#Textile-damage_Biological-growth"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Textile-damage_Biological-growth">Biological growth</a>
+         title="https://w3id.org/con-tax/damages/mwv#Textile-damage_Biological-growth">Biological growth</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth">Biological growth</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth">Biological growth</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi_Black-yeast"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi_Black-yeast">Black yeast</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi_Black-yeast">Black yeast</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi_Bracket-fungi"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi_Bracket-fungi">Bracket fungi</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi_Bracket-fungi">Bracket fungi</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects_Bread-beetle"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects_Bread-beetle">Bread beetle</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects_Bread-beetle">Bread beetle</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Insects_Brown-powderpost-beetle"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Insects_Brown-powderpost-beetle">Brown powderpost beetle</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Insects_Brown-powderpost-beetle">Brown powderpost beetle</a>
    </li>
    <li>
       <a href="#Textile-damage_Biological-growth_Insects_Casemaking-clothes-moth"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Textile-damage_Biological-growth_Insects_Casemaking-clothes-moth">Casemaking clothes moth</a>
+         title="https://w3id.org/con-tax/damages/mwv#Textile-damage_Biological-growth_Insects_Casemaking-clothes-moth">Casemaking clothes moth</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi_Cellar-fungus"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi_Cellar-fungus">Cellar fungus</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi_Cellar-fungus">Cellar fungus</a>
    </li>
    <li>
       <a href="#Textile-damage_Biological-growth_Insects_Clothes-moth"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Textile-damage_Biological-growth_Insects_Clothes-moth">Clothing moth</a>
+         title="https://w3id.org/con-tax/damages/mwv#Textile-damage_Biological-growth_Insects_Clothes-moth">Clothing moth</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects_Cockroaches"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects_Cockroaches">Cockroaches</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects_Cockroaches">Cockroaches</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Insects_Common-house-borer"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Insects_Common-house-borer">Common house borer</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Insects_Common-house-borer">Common house borer</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi_Cup-fungus"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi_Cup-fungus">Cup fungus</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi_Cup-fungus">Cup fungus</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Insects_Deathwatch-beetle"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Insects_Deathwatch-beetle">Deathwatch beetle</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Insects_Deathwatch-beetle">Deathwatch beetle</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects_Deathwatch-or-Spider-beetle"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects_Deathwatch-or-Spider-beetle">Deathwatch or spider beetle</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects_Deathwatch-or-Spider-beetle">Deathwatch or spider beetle</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi_Dry-rot-fungus"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi_Dry-rot-fungus">Dry rot fungus</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi_Dry-rot-fungus">Dry rot fungus</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects_Dust-or-book-lice"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects_Dust-or-book-lice">Dust or book lice</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects_Dust-or-book-lice">Dust or book lice</a>
    </li>
    <li>
       <a href="#Natural-stone-damage_Biological-growth_Insects_European-orchard-bee"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Natural-stone-damage_Biological-growth_Insects_European-orchard-bee">European orchard bee</a>
+         title="https://w3id.org/con-tax/damages/mwv#Natural-stone-damage_Biological-growth_Insects_European-orchard-bee">European orchard bee</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects_Firebrat"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects_Firebrat">Firebrat</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects_Firebrat">Firebrat</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi">Fungi</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi">Fungi</a>
    </li>
    <li>
       <a href="#Textile-damage_Biological-growth_Insects_Fur-beetle"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Textile-damage_Biological-growth_Insects_Fur-beetle">Fur beetle</a>
+         title="https://w3id.org/con-tax/damages/mwv#Textile-damage_Biological-growth_Insects_Fur-beetle">Fur beetle</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Insects_House-longhorn-beetle"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Insects_House-longhorn-beetle">House longhorn beetle</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Insects_House-longhorn-beetle">House longhorn beetle</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi_Ink-cap"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi_Ink-cap">Ink cap</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi_Ink-cap">Ink cap</a>
    </li>
    <li>
       <a href="#Natural-stone-damage_Biological-growth_Insects"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Natural-stone-damage_Biological-growth_Insects">Insects</a>
+         title="https://w3id.org/con-tax/damages/mwv#Natural-stone-damage_Biological-growth_Insects">Insects</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects">Insects</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects">Insects</a>
    </li>
    <li>
       <a href="#Textile-damage_Biological-growth_Insects"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Textile-damage_Biological-growth_Insects">Insects</a>
+         title="https://w3id.org/con-tax/damages/mwv#Textile-damage_Biological-growth_Insects">Insects</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Insects"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Insects">Insects</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Insects">Insects</a>
    </li>
    <li>
       <a href="#Textile-damage_Biological-growth_Insects_Larder-beetle"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Textile-damage_Biological-growth_Insects_Larder-beetle">Larder beetle</a>
+         title="https://w3id.org/con-tax/damages/mwv#Textile-damage_Biological-growth_Insects_Larder-beetle">Larder beetle</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi_Oak-polypore"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi_Oak-polypore">Oak polypore</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi_Oak-polypore">Oak polypore</a>
    </li>
    <li>
       <a href="#Paper-damage"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage">Paper or other vegetable material</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage">Paper or other vegetable material</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects_Paperfish"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects_Paperfish">Paper silverfish</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects_Paperfish">Paper silverfish</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi_Polypore-fungus"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi_Polypore-fungus">Polypore fungus</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi_Polypore-fungus">Polypore fungus</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects_Silvervish"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects_Silvervish">Silverfish</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects_Silvervish">Silverfish</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects_Venerable-silverfish"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects_Venerable-silverfish">Silverfish</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects_Venerable-silverfish">Silverfish</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Fungi_Surface-mould"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Fungi_Surface-mould">Surface mould</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Fungi_Surface-mould">Surface mould</a>
    </li>
    <li>
       <a href="#Textile-damage"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Textile-damage">Textile</a>
+         title="https://w3id.org/con-tax/damages/mwv#Textile-damage">Textile</a>
    </li>
    <li>
       <a href="#Paper-damage_Biological-growth_Insects_Thrips"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Paper-damage_Biological-growth_Insects_Thrips">Thrips</a>
+         title="https://w3id.org/con-tax/damages/mwv#Paper-damage_Biological-growth_Insects_Thrips">Thrips</a>
    </li>
    <li>
       <a href="#Timber-damage"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage">Timber</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage">Timber</a>
    </li>
    <li>
       <a href="#Textile-damage_Biological-growth_Insects_Varied-carpet-and-Museum-beetle"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Textile-damage_Biological-growth_Insects_Varied-carpet-and-Museum-beetle">Varied carpet and Museum beetle</a>
+         title="https://w3id.org/con-tax/damages/mwv#Textile-damage_Biological-growth_Insects_Varied-carpet-and-Museum-beetle">Varied carpet and Museum beetle</a>
    </li>
    <li>
       <a href="#Timber-damage_Biological-growth_Insects_Wood-boring-weevil"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#Timber-damage_Biological-growth_Insects_Wood-boring-weevil">Wood boring weevil</a>
+         title="https://w3id.org/con-tax/damages/mwv#Timber-damage_Biological-growth_Insects_Wood-boring-weevil">Wood boring weevil</a>
    </li>
 </ul><h4>Named Individuals</h4><ul class="hlist">
    <li>
-      <a href="#"
-         title="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen">
-         <span>monumentenwacht vlaanderen</span>
+      <a href="#" title="https://w3id.org/con-tax/damages/mwv">
+         <span>mwv</span>
       </a>
    </li>
 </ul>
