--- a/sections/abstract-en.html
+++ b/sections/abstract-en.html
@@ -1,24 +1,24 @@
 <h2>Abstract</h2>
 <span class="markdown">
-The Monumentenwacht Vlaanderen Damage ontology (MW-D) is a taxonomy containing OWL classes to classify **construction damage**, extending [dot:ClassifiedDamage](https://w3id.org/dot#ClassifiedDamage).
+The MWV Damage ontology (MWV-D) is a taxonomy containing OWL classes to classify **construction damage**, extending [dot:ClassifiedDamage](https://w3id.org/dot#ClassifiedDamage).
 The taxonomy is manually created based on existing PDF reports of Monumentenwacht regarding damage inspections. In its current state, it contains content regarding timber damage [1] and damage caused by insects [2].
 The main taxonomy is structured using RDFS subsumption axioms. 
 </span>
 <p style="text-align: center;">
-	The namespace for MW-D terms is <span class="repeated" style="font-family: courier;">https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#</span>
+	The namespace for MWV-D terms is <span class="repeated" style="font-family: courier;">https://w3id.org/con-tax/damages/mwv#</span>
 </p>
 <p style="text-align: center;">
-	The suggested prefix for the MW-D taxonomy is <span class="repeated" style="font-family: courier;">mw-d</span>
+	The suggested prefix for the MWV-D taxonomy is <span class="repeated" style="font-family: courier;">mwv-d</span>
 </p>
 <p style="text-align: center;">
-	The Turtle version of the MW-D taxonomy is available at <a href="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen/monumentenwacht-vlaanderen.ttl">https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen/monumentenwacht-vlaanderen.ttl</a><br>
-	The RDF/XML version of the MW-D taxonomy is available at <a href="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen/monumentenwacht-vlaanderen.rdf">https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen/monumentenwacht-vlaanderen.rdf</a><br>
-	The JSON-LD version of the MW-D taxonomy is available at <a href="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen/monumentenwacht-vlaanderen.jsonld">https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen/monumentenwacht-vlaanderen.jsonld</a><br> 
-	The N-Triples version of the MW-D taxonomy is available at <a href="https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen/monumentenwacht-vlaanderen.nt">https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen/monumentenwacht-vlaanderen.nt</a><br>
+	The Turtle version of the MWV-D taxonomy is available at <a href="https://w3id.org/con-tax/damages/mwv/mwv.ttl">https://w3id.org/con-tax/damages/mwv/mwv.ttl</a><br>
+	The RDF/XML version of the MWV-D taxonomy is available at <a href="https://w3id.org/con-tax/damages/mwv/mwv.rdf">https://w3id.org/con-tax/damages/mwv/mwv.rdf</a><br>
+	The JSON-LD version of the MWV-D taxonomy is available at <a href="https://w3id.org/con-tax/damages/mwv/mwv.jsonld">https://w3id.org/con-tax/damages/mwv/mwv.jsonld</a><br> 
+	The N-Triples version of the MWV-D taxonomy is available at <a href="https://w3id.org/con-tax/damages/mwv/mwv.nt">https://w3id.org/con-tax/damages/mwv/mwv.nt</a><br>
 </p>
 
 <span class="markdown">
-The MW-D taxonomy was created by Mathias Bonduel (KU Leuven) during his PhD research (2017-2020) funded by the Research Foundation Flanders in the form of a Strategic Basic Research grant (grant agreement 1S65917N).
+The MWV-D taxonomy was created by Mathias Bonduel (KU Leuven) during his PhD research (2017-2020) funded by the Research Foundation Flanders in the form of a Strategic Basic Research grant (grant agreement 1S65917N).
 
 [1] Schoeters, E., Heerwegh, L., & van Laar, B. (2005). Biologische aantastingen in hout. Retrieved from https://www.monumentenwacht.be/files/brochure_aantastinghout.pdf
 
