--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -13,7 +13,7 @@
 <tr><td><b>gvp</b></td><td>&lt;http://vocab.getty.edu/ontology#&gt;</td></tr>
 <tr><td><b>iso-thes</b></td><td>&lt;http://purl.org/iso25964/skos-thes#&gt;</td></tr>
 <tr><td><b>mdcs</b></td><td>&lt;https://mdcs.monumentenkennis.nl/damageatlas/ontology#&gt;</td></tr>
-<tr><td><b>mw-d</b></td><td>&lt;https://w3id.org/con-tax/damages/monumentenwacht-vlaanderen#&gt;</td></tr>
+<tr><td><b>mwv-d</b></td><td>&lt;https://w3id.org/con-tax/damages/mwv#&gt;</td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl#&gt;</td></tr>
 <tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns#&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema#&gt;</td></tr>
